Add thymeleaf into dependencies. Switch from HttpServlet to jax-rs. Create head, header and footer fragments for reuse in thymeleaf views. Use thymeleaf in home controller. Create controllers for favicon and css (jax-rs applicationPath mapped to / is preventing to serve it statically).

--- a/l4d2-js-stats/pom.xml
+++ b/l4d2-js-stats/pom.xml
@@ -54,8 +54,15 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.7</version>
 		</dependency>
+		
+		<!-- view -->
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>2.1.2.RELEASE</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<finalName>l4d2-js-stats</finalName>
 	</build>
