--- a/l4d2-js-stats/pom.xml
+++ b/l4d2-js-stats/pom.xml
@@ -10,6 +10,7 @@
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
+		<version.resteasy>3.0.8.Final</version.resteasy>
 	</properties>
 
 	<dependencies>
@@ -22,8 +23,13 @@
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
-			<version>3.0.8.Final</version>
+			<version>${version.resteasy}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-multipart-provider</artifactId>
+			<version>${version.resteasy}</version>
 		</dependency>
 
 		<dependency>
