--- a/l4d2-js-stats/pom.xml
+++ b/l4d2-js-stats/pom.xml
@@ -38,6 +38,12 @@
 			<version>1.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.3</version>
+		</dependency>
+
 		<!-- unit tests -->
 		<dependency>
 			<groupId>junit</groupId>
