--- a/l4d2-js-stats/pom.xml
+++ b/l4d2-js-stats/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pl.vgtworld</groupId>
 	<artifactId>l4d2-js-stats</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>war</packaging>
 
 	<properties>
